fixed spacing on buttons

--- a/client/app/styles/queue/_organization_users.scss
+++ b/client/app/styles/queue/_organization_users.scss
@@ -53,7 +53,7 @@
 }
 
 .button-style {
-  padding-right: '1rem';
+  margin-right: 1rem;
   display: 'inline-block';
   width: '100%';
 }
